// ================================================================
// Users
// ================================================================

Table users {
  id bigserial [pk, note: 'Primary key']
  username varchar(100) [unique, not null, note: 'Login username']
  password_hash varchar(255) [not null, note: 'Hashed password']
  email varchar(100) [unique, not null, note: 'Email address']
  full_name varchar(100) [not null, note: 'Full name']
  phone varchar(20) [note: 'Phone number']
  avatar_url varchar(500) [note: 'Profile picture']
  position varchar(100) [note: 'Job position / title']
  role varchar(50) [not null, default: 'TEAM_MEMBER', note: 'ADMIN, HR, PROJECT_MANAGER, TEAM_MEMBER']
  is_verified boolean [default: false, note: 'Whether email has been verified']
  last_login_at timestamp [note: 'Last login time']
  is_active boolean [default: true, note: 'Currently employed or resigned']
  is_deleted boolean [default: false, note: 'Soft delete']
  created_at timestamp [not null, default: `now()`, note: 'Creation time']
  created_by bigint [note: 'Created by']
  updated_at timestamp [note: 'Last update time']
  updated_by bigint [note: 'Updated by']
}

// ================================================================
// Skills
// ================================================================

Table skill_categories {
  id bigserial [pk, note: 'Primary key']
  name varchar(100) [not null, unique, note: 'Category name (Backend, Frontend, DevOps, Soft skill...)']
  description text [note: 'Category description']
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint
}

Table skills {
  id bigserial [pk, note: 'Primary key']
  name varchar(100) [not null, note: 'Skill name (Java, React, Testing, Design...)']
  category_id bigint [ref: > skill_categories.id, note: 'FK to skill_categories']
  description text [note: 'Skill description']
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint
}

Table employee_skills {
  id bigserial [pk, note: 'Primary key']
  user_id bigint [not null, note: 'Employee']
  skill_id bigint [not null, note: 'Skill']
  level varchar(20) [not null, note: 'Proficiency level: BEGINNER / INTERMEDIATE / ADVANCED / EXPERT']
  note text [note: 'Additional notes (e.g. used in project X)']
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint

  indexes {
    (user_id, skill_id) [unique, note: 'Each employee can only have one record per skill']
  }
}

// ================================================================
// Projects
// ================================================================

Table projects {
  id bigserial [pk, note: 'Primary key']
  name varchar(200) [not null, note: 'Project name']
  code varchar(50) [unique, note: 'Project code']
  description text [note: 'Project description']
  status varchar(50) [not null, default: 'PLANNING', note: 'Status: PLANNING / IN_PROGRESS / ON_HOLD / COMPLETED / CANCELLED']
  priority varchar(20) [default: 'MEDIUM', note: 'Priority: LOW / MEDIUM / HIGH / CRITICAL']
  start_date date [note: 'Planned start date']
  end_date date [note: 'Planned end date']
  actual_end_date date [note: 'Actual end date']
  manager_id bigint [not null, note: 'Project Manager']
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint
}

Table project_members {
  id bigserial [pk, note: 'Primary key']
  project_id bigint [not null, note: 'Project']
  user_id bigint [not null, note: 'Participating employee']
  role_in_project varchar(50) [not null, default: 'MEMBER', note: 'Role in project: PROJECT_MANAGER / MEMBER']
  allocated_effort_percent int [note: 'Percentage of time allocated to this project (e.g. 50 = 50% of time)']
  join_date date [note: 'Date joined the project']
  leave_date date [note: 'Date left the project (if applicable)']
  note text [note: 'Notes on role and responsibilities']
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint

  indexes {
    (project_id, user_id) [unique, note: 'Each person can only join a project once']
  }
}

// ================================================================
// Tasks
// ================================================================

Table tasks {
  id bigserial [pk, note: 'Primary key']
  project_id bigint [not null, note: 'Belongs to which project']
  title varchar(300) [not null, note: 'Task title']
  description text [note: 'Detailed description of the work to be done']
  type varchar(50) [not null, default: 'FEATURE', note: 'Type: FEATURE / BUG / RESEARCH']
  status varchar(50) [not null, default: 'TODO', note: 'Status: TODO / IN_PROGRESS / DONE / CANCELLED']
  priority varchar(20) [not null, default: 'MEDIUM', note: 'Priority: LOW / MEDIUM / HIGH / CRITICAL']
  estimated_hours decimal(6,1) [note: 'Estimated hours to complete']
  start_date date [note: 'Start date']
  due_date date [note: 'Deadline']
  completed_at timestamp [note: 'Actual completion time']
  assignee_id bigint [note: 'Person assigned to this task']
  reporter_id bigint [not null, note: 'Task creator / reporter']
  is_deleted boolean [default: false]
  created_at timestamp [not null, default: `now()`]
  created_by bigint
  updated_at timestamp
  updated_by bigint
}

Table task_skill_requirements {
  id bigserial [pk, note: 'Primary key']
  task_id bigint [not null, note: 'Task requiring this skill']
  skill_id bigint [not null, note: 'Required skill']
  minimum_level varchar(20) [not null, default: 'INTERMEDIATE', note: 'Minimum required level: BEGINNER / INTERMEDIATE / ADVANCED / EXPERT']
  is_required boolean [default: true, note: 'Mandatory or preferred only']
  created_at timestamp [not null, default: `now()`]
  created_by bigint

  indexes {
    (task_id, skill_id) [unique]
  }
}

Table task_activity {
  id bigserial [pk, note: 'Primary key']
  task_id bigint [not null, note: 'Task this activity belongs to']
  action varchar(40) [not null, note: 'TaskActivityType: STATUS_CHANGED, PRIORITY_CHANGED, ASSIGNEE_CHANGED, ESTIMATE_CHANGED, TYPE_CHANGED, TITLE_CHANGED, DESCRIPTION_CHANGED, START_DATE_CHANGED, DUE_DATE_CHANGED, TASK_CREATED, TASK_DELETED, ATTACHMENT_ADDED, ATTACHMENT_REMOVED']
  old_value text [note: 'Raw value before the change (enum name / user id / number / ISO date / file name)']
  new_value text [note: 'Raw value after the change']
  actor_id bigint [not null, note: 'Who performed the action']
  created_at timestamp [not null, default: `now()`]
}

// ================================================================
// Notifications
// ================================================================

Table notifications {
  id bigserial [pk, note: 'Primary key']
  recipient_id bigint [not null, note: 'Notification recipient']
  type varchar(100) [not null, note: 'Notification type: TASK_ASSIGNED / TASK_OVERDUE / OVERLOAD_WARNING / BURNOUT_ALERT']
  title varchar(300) [not null, note: 'Notification title']
  content text [note: 'Detailed content']
  reference_type varchar(50) [note: 'Related object type: TASK / PROJECT']
  reference_id bigint [note: 'Related object ID']
  is_read boolean [default: false, note: 'Whether it has been read']
  read_at timestamp [note: 'Time it was read']
  created_at timestamp [not null, default: `now()`]
}

// ================================================================
// References
// ================================================================

// users
Ref: users.created_by > users.id
Ref: users.updated_by > users.id

// skills
Ref: skills.created_by > users.id
Ref: skills.updated_by > users.id

// employee_skills
Ref: employee_skills.user_id > users.id
Ref: employee_skills.skill_id > skills.id
Ref: employee_skills.created_by > users.id
Ref: employee_skills.updated_by > users.id

// projects
Ref: projects.manager_id > users.id
Ref: projects.created_by > users.id
Ref: projects.updated_by > users.id

// project_members
Ref: project_members.project_id > projects.id
Ref: project_members.user_id > users.id
Ref: project_members.created_by > users.id
Ref: project_members.updated_by > users.id

// tasks
Ref: tasks.project_id > projects.id
Ref: tasks.assignee_id > users.id
Ref: tasks.reporter_id > users.id
Ref: tasks.created_by > users.id
Ref: tasks.updated_by > users.id

// task_skill_requirements
Ref: task_skill_requirements.task_id > tasks.id
Ref: task_skill_requirements.skill_id > skills.id
Ref: task_skill_requirements.created_by > users.id

// task_activity
Ref: task_activity.task_id > tasks.id
Ref: task_activity.actor_id > users.id

// notifications
Ref: notifications.recipient_id > users.id
